# IPZ-labs

./: CMakeLists.txt  IPZ.txt  README.md  Translator.pro  test1.sig  test2.sig
include/: codegen.h  labels.h  listing.h  parser.h  scanner.h  syntaxtree.h  tables.h  token.h
lab1/: lexicalanalyzer.cpp  lexicalanalyzer.h  main.cpp  token.h
src/: codegen.cpp  listing.cpp  listing.h  main.cpp  parser.cpp  scanner.cpp  scanner.h  syntaxtree.cpp  tables.cpp  token.h
